--- a/Inquiries.html
+++ b/Inquiries.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/d">free web maker</a></section><section class="mbr-section article content9 cid-r2aJjOaQ54" id="content9-1v">
+<section class="engine"><a href="https://mobiri.se/e">how to make a site for free</a></section><section class="mbr-section article content9 cid-r2aJjOaQ54" id="content9-1v">
     
      
 
@@ -85,7 +85,7 @@
     <div class="form-container">
         <div class="media-container-column" data-form-type="formoid">
             <div data-form-alert="" hidden="" class="align-center">Thank you for your inquiry, we will contact you as soon as possible!</div>
-            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tcKG+WcPbP/itni8vFP2dROePrsB7Ti+4S02SIjF+clVPKZs1DLVfGInOa3btZ9HYUF0rI0cnzFISO+2lNQCeBA7MlShjqQj8FohXtWuHFqRJKJSJ+mpZyvjqM4T4mKC" data-form-field="Email">
+            <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uAAN54vWZVXG0nXTiGBqY+SD7QA9y7FZMv/FwOPJgj8XNUsXrhrpMqBk5l3FPc2HfHGfU5dpRliGKcWSqF4iVol/AWAQEF2Kp6+ajtdExJzy3EK5cKCFUGLnfbN+jB65" data-form-field="Email">
                 <div data-for="name">
                     <div class="form-group">
                         <input type="text" class="form-control px-3" name="name" data-form-field="Name" placeholder="Name:" required="" id="name-header15-1r">
