--- a/Team.html
+++ b/Team.html
@@ -48,15 +48,15 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="www.qdseshipping.html">Home</a></li><li class="nav-item dropdown open">
-                    <a class="nav-link link dropdown-toggle text-black display-4" href="page7.html" data-toggle="dropdown-submenu" aria-expanded="true">About Us</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page17.html" aria-expanded="false">About NPSEL-QD</a><a class="dropdown-item text-black display-4" href="page18.html">Mission</a><a class="dropdown-item text-black display-4" href="page9.html" aria-expanded="false">History &amp; Culture</a><a class="dropdown-item text-black display-4" href="page10.html" aria-expanded="false">Organizational Structure</a><a class="dropdown-item text-black display-4" href="page11.html" aria-expanded="false">Our Team</a><a class="dropdown-item text-black display-4" href="page12.html" aria-expanded="false">Certification</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page5.html#content5-1n" data-toggle="dropdown-submenu" aria-expanded="false">Services</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="OceanFreight.html">Ocean Freight</a><a class="dropdown-item text-black display-4" href="page2.html">Land Freight</a><a class="dropdown-item text-black display-4" href="page3.html">Air Freight</a><a class="dropdown-item text-black display-4" href="page4.html">Warehousing</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page13.html">News</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html">Global Network</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page16.html">Contact Us</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="www.qdseshipping.html">Home</a></li><li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="page7.html" data-toggle="dropdown-submenu" aria-expanded="false">About Us</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="AboutUs.html" aria-expanded="false">About NPSEL-QD</a><a class="dropdown-item text-black display-4" href="Mission.html">Mission</a><a class="dropdown-item text-black display-4" href="History&Culture.html" aria-expanded="false">History &amp; Culture</a><a class="dropdown-item text-black display-4" href="Organizational.html" aria-expanded="false">Organizational Structure</a><a class="dropdown-item text-black display-4" href="Team.html" aria-expanded="false">Our Team</a><a class="dropdown-item text-black display-4" href="Certification.html" aria-expanded="false">Certification</a></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page5.html#content5-1n" data-toggle="dropdown-submenu" aria-expanded="false">Services</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="Ocean Freight.html">Ocean Freight</a><a class="dropdown-item text-black display-4" href="Land Freight.html">Land Freight</a><a class="dropdown-item text-black display-4" href="Air Freight.html">Air Freight</a><a class="dropdown-item text-black display-4" href="Warehousing.html">Warehousing</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="News.html">News</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Network.html">Global Network</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Contact.html">Contact Us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">free portfolio website templates</a></section><section class="mbr-section content5 cid-r2bZsZ99uL" id="content5-2v">
+<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content5 cid-r2bZsZ99uL" id="content5-2v">
 
     
 
@@ -459,8 +459,8 @@
     <div class="container">
         <div class="media-container-row title">
             <div class="col-12 col-md-8">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="page17.html">&nbsp; &nbsp; &nbsp; About NPSEL-QD &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-primary-outline display-4" href="page18.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Mission &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
-                    <a class="btn btn-primary-outline display-4" href="page9.html">&nbsp; &nbsp; &nbsp; History &amp; Culture &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-primary-outline display-4" href="page10.html">Organizational Structure</a>  <a class="btn btn-primary-outline display-4" href="page12.html">Certification</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary-outline display-4" href="AboutUs.html">&nbsp; &nbsp; &nbsp; About NPSEL-QD &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-primary-outline display-4" href="Mission.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Mission &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a>
+                    <a class="btn btn-primary-outline display-4" href="History&Culture.html">&nbsp; &nbsp; &nbsp; History &amp; Culture &nbsp; &nbsp;&nbsp;</a> <a class="btn btn-primary-outline display-4" href="Organizational.html">Organizational Structure</a>  <a class="btn btn-primary-outline display-4" href="Certification.html">Certification</a></div>
             </div>
         </div>
     </div>
