--- a/www.qdseshipping.html
+++ b/www.qdseshipping.html
@@ -47,15 +47,15 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="www.qdseshipping.html">Home</a></li><li class="nav-item dropdown open">
-                    <a class="nav-link link dropdown-toggle text-black display-4" href="page7.html" data-toggle="dropdown-submenu" aria-expanded="true">About Us</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="page17.html" aria-expanded="false">About NPSEL-QD</a><a class="dropdown-item text-black display-4" href="page18.html">Mission</a><a class="dropdown-item text-black display-4" href="page9.html" aria-expanded="false">History &amp; Culture</a><a class="dropdown-item text-black display-4" href="page10.html" aria-expanded="false">Organizational Structure</a><a class="dropdown-item text-black display-4" href="page11.html" aria-expanded="false">Our Team</a><a class="dropdown-item text-black display-4" href="page12.html" aria-expanded="false">Certification</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page5.html#content5-1n" data-toggle="dropdown-submenu" aria-expanded="false">Services</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="OceanFreight.html">Ocean Freight</a><a class="dropdown-item text-black display-4" href="page2.html">Land Freight</a><a class="dropdown-item text-black display-4" href="page3.html">Air Freight</a><a class="dropdown-item text-black display-4" href="page4.html">Warehousing</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page13.html">News</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page15.html">Global Network</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page16.html">Contact Us</a></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="www.qdseshipping.html">Home</a></li><li class="nav-item dropdown">
+                    <a class="nav-link link dropdown-toggle text-black display-4" href="page7.html" data-toggle="dropdown-submenu" aria-expanded="false">About Us</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="AboutUs.html" aria-expanded="false">About NPSEL-QD</a><a class="dropdown-item text-black display-4" href="Mission.html">Mission</a><a class="dropdown-item text-black display-4" href="History&Culture.html" aria-expanded="false">History &amp; Culture</a><a class="dropdown-item text-black display-4" href="Organizational.html" aria-expanded="false">Organizational Structure</a><a class="dropdown-item text-black display-4" href="Team.html" aria-expanded="false">Our Team</a><a class="dropdown-item text-black display-4" href="Certification.html" aria-expanded="false">Certification</a></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-black display-4" href="page5.html#content5-1n" data-toggle="dropdown-submenu" aria-expanded="false">Services</a><div class="dropdown-menu"><a class="dropdown-item text-black display-4" href="Ocean Freight.html">Ocean Freight</a><a class="dropdown-item text-black display-4" href="Land Freight.html">Land Freight</a><a class="dropdown-item text-black display-4" href="Air Freight.html">Air Freight</a><a class="dropdown-item text-black display-4" href="Warehousing.html">Warehousing</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="News.html">News</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Network.html">Global Network</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Contact.html">Contact Us</a></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/z">best website templates</a></section><section class="carousel slide cid-r2aPgPbjYT" data-interval="false" id="slider1-1x">
+<section class="engine"><a href="https://mobiri.se/m">free web design templates</a></section><section class="carousel slide cid-r2aPgPbjYT" data-interval="false" id="slider1-1x">
 
     
 
@@ -106,7 +106,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="OceanFreight.html"><img src="assets/images/mbr-1-676x396.jpg" alt="Mobirise" title=""></a>
+                        <a href="Ocean Freight.html"><img src="assets/images/mbr-1-676x396.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -119,7 +119,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page2.html"><img src="assets/images/mbr-2-676x507.jpg" alt="Mobirise" title=""></a>
+                        <a href="Land Freight.html"><img src="assets/images/mbr-2-676x507.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box ">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Land Freight</h4>
@@ -131,7 +131,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page3.html"><img src="assets/images/ba-ethiopia-flight-loading-2-676x466.jpg" alt="Mobirise" title=""></a>
+                        <a href="Air Freight.html"><img src="assets/images/ba-ethiopia-flight-loading-2-676x466.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Air Freight</h4>
@@ -143,7 +143,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="page4.html"><img src="assets/images/warehouse-492x279.jpg" alt="Mobirise" title=""></a>
+                        <a href="Warehousing.html"><img src="assets/images/warehouse-492x279.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Warehousing</h4>
